@@ -1,5 +1,6 @@
 package hanium.modic.backend.common.cors;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -8,19 +9,21 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import hanium.modic.backend.common.property.property.CorsProperties;
+import lombok.RequiredArgsConstructor;
+
 @Configuration
+@RequiredArgsConstructor
 public class CorsConfig {
 
-	private static final String[] ORIGINS = {
-		"http://localhost:3000"
-	};
+	private final CorsProperties corsProperties;
 
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration config = new CorsConfiguration();
 
 		config.setAllowCredentials(true);
-		config.setAllowedOrigins(List.of(ORIGINS));
+		config.setAllowedOrigins(Arrays.asList(corsProperties.getAllowedOrigins()));
 		config.addAllowedHeader("*");
 		config.addAllowedMethod("*");
 		config.setMaxAge(3600L);
